# llm-zoomcamp

./: compose.yaml  pyproject.toml
notebooks/: module_01.ipynb  module_02-huggingface-flan-t5.ipynb  module_02-huggingface-mistral-7b.ipynb  module_02-huggingface-phi3.ipynb  module_02.ipynb
src/llm_zoomcamp/: __init__.py
