[project]
name = "llm-zoomcamp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Nikki Satmaka", email = "30800020+NikkiSatmaka@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "elasticsearch>=8.17.2",
    "ipykernel>=6.29.5",
    "openai>=1.70.0",
    "polars[pandas]>=1.26.0",
    "rich>=14.0.0",
    "scikit-learn>=1.6.1",
]
